--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,14 @@
 	
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
-		<activity android:name=".MPPFinalActivity" android:label="@string/app_name">
+		<activity android:name="LoginActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
+        
+        <activity android:name=".MPPFinalActivity"></activity>
 		<activity android:name=".HomePage"></activity>
 		<activity android:name=".MapPage"></activity>
 		<activity android:name=".ProfilePage"></activity>
@@ -24,7 +25,8 @@
 		<activity android:name=".TGAMap"></activity>
 		<activity android:name=".TGAProfile"></activity>
 		<activity android:name=".TGAActivity"></activity>
-		<activity android:name="LoginActivity"></activity>
+		<!-- <activity android:name="LoginActivity"></activity> -->
+		<activity android:name="SupportActivity"></activity>
 
 		
 	</application>
