--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,32 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="lab.mpp" android:versionCode="1" android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="10" />
-	
+
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-	
+
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
-		<activity android:name="LoginActivity" android:label="@string/app_name">
+		<activity android:name="LoginActivity" android:label="@string/app_name"
+			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-        
-        <activity android:name=".MPPFinalActivity"></activity>
-		<activity android:name=".HomePage"></activity>
-		<activity android:name=".MapPage"></activity>
-		<activity android:name=".ProfilePage"></activity>
-		<activity android:name=".ActivityPage"></activity>
+
+		<activity android:name=".MPPFinalActivity"
+			android:screenOrientation="portrait"></activity>
+		<activity android:name=".HomePage" android:screenOrientation="portrait"></activity>
+		<activity android:name=".MapPage" android:screenOrientation="portrait"></activity>
+		<activity android:name=".ProfilePage"
+			android:screenOrientation="portrait"></activity>
+		<activity android:name=".ActivityPage"
+			android:screenOrientation="portrait"></activity>
 		<activity android:name=".TGAHome"></activity>
 		<activity android:name=".TGAMap"></activity>
 		<activity android:name=".TGAProfile"></activity>
 		<activity android:name=".TGAActivity"></activity>
 		<!-- <activity android:name="LoginActivity"></activity> -->
-		<activity android:name="SupportActivity"></activity>
+		<activity android:name="SupportActivity"
+			android:screenOrientation="portrait"></activity>
 
-		
+
 	</application>
 </manifest>
