--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	<application android:icon="@drawable/app_icon" android:label="TagIt">
 		<uses-library android:name="com.google.android.maps" />
 		<activity android:name="LoginActivity" android:label="@string/app_name"
 			android:screenOrientation="portrait">
